--- a/Side Band Fitting.ipynb
+++ b/Side Band Fitting.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 11,
    "id": "e60c7d18",
    "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
     "import os\n",
+    "import sys\n",
     "from scipy import optimize\n",
     "from scipy.optimize import leastsq\n",
     "from numpy import *\n",
@@ -30,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 23,
    "id": "275ef32e",
    "metadata": {},
    "outputs": [],
@@ -42,13 +43,13 @@
     "    right = underscore_locations[10]\n",
     "    return int(float(file[left:right]))\n",
     "\n",
-    "def get_files():\n",
-    "    os.chdir('/home/henry/Documents/Physics Internship/15112022/27_dBm/Spectrum/')\n",
+    "def get_files(data_set, power_folder):\n",
+    "    os.chdir(f'/home/henry/Documents/Physics Internship/{data_set}/{power_folder}/Spectrum/')\n",
     "    files= glob.glob('*.txt')\n",
     "    return files\n",
     "\n",
-    "def get_detuning_files_dict():\n",
-    "    files = get_files()\n",
+    "def get_detuning_files_dict(data_set, power_folder):\n",
+    "    files = get_files(data_set, power_folder)\n",
     "    detunings = sorted(list(set([get_file_detuning(file) for file in files])), reverse=True)\n",
     "    detuning_files_dict = {detuning: [] for detuning in detunings}\n",
     "    for file in files:\n",
@@ -63,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 13,
    "id": "21e1e5dc",
    "metadata": {},
    "outputs": [],
@@ -75,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 14,
    "id": "22dd2010",
    "metadata": {},
    "outputs": [],
@@ -104,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 15,
    "id": "adf50abd",
    "metadata": {},
    "outputs": [],
@@ -114,7 +115,7 @@
     "    voltage = get_voltage(raw_data)\n",
     "    voltage = convert_to_mW(voltage)\n",
     "    S21_detuning = get_S21_detuning(voltage, power)\n",
-    "    index_maximum = get_index_maximum(frequency, voltage)\n",
+    "    index_maximum = get_index_maximum(voltage)\n",
     "    return S21_detuning, index_maximum\n",
     "\n",
     "def get_gamma(detuning):\n",
@@ -131,12 +132,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 16,
    "id": "70e6cc43",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_index_maximum(frequency, voltage):\n",
+    "def get_index_maximum(voltage):\n",
     "    voltage = get_moving_average(voltage, 6)\n",
     "    max_index = argmax(array(voltage))\n",
     "    return max_index\n",
@@ -158,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 17,
    "id": "ed992e6d",
    "metadata": {},
    "outputs": [],
@@ -185,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 18,
    "id": "654ab8c0",
    "metadata": {},
    "outputs": [],
@@ -220,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 19,
    "id": "eaa27aa1",
    "metadata": {},
    "outputs": [],
@@ -248,23 +249,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 21,
+   "id": "9975abe5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def output_gamma(detunings, gamma_list, data_set, power_folder):\n",
+    "    output_path = prepare_output_path()\n",
+    "    file_name = os.path.join(output_path, f\"gamma_vs_detuning_{data_set}_{power_folder}\")\n",
+    "    with open(file_name, \"w+\") as file:\n",
+    "        for detuning, gamma, in zip(detunings, gamma_list):\n",
+    "            file.writelines(f\"{detuning}    {gamma}\")\n",
+    "\n",
+    "def prepare_output_path():\n",
+    "    parent_path = os.path.dirname(os.path.dirname(sys.path[0]))\n",
+    "    output_path = os.path.join(parent_path, \"Gamma Results\")\n",
+    "    if os.path.isdir(output_path) is False:\n",
+    "        os.mkdir(output_path)\n",
+    "    return output_path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "id": "d535ba84",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[32.00611760378434]\n"
+     "ename": "KeyError",
+     "evalue": "8000000",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[25], line 10\u001b[0m\n\u001b[1;32m      8\u001b[0m path \u001b[39m=\u001b[39m os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mjoin(os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mdirname(os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mdirname(sys\u001b[39m.\u001b[39mpath[\u001b[39m0\u001b[39m])), data_set)\n\u001b[1;32m      9\u001b[0m \u001b[39mfor\u001b[39;00m power_folder \u001b[39min\u001b[39;00m os\u001b[39m.\u001b[39mlistdir(path):\n\u001b[0;32m---> 10\u001b[0m     process_experiment(data_set, power_folder)\n",
+      "Cell \u001b[0;32mIn[25], line 4\u001b[0m, in \u001b[0;36mprocess_experiment\u001b[0;34m(data_set, power_folder)\u001b[0m\n\u001b[1;32m      2\u001b[0m detuning_files_dict, detunings \u001b[39m=\u001b[39m get_detuning_files_dict(data_set, power_folder)\n\u001b[1;32m      3\u001b[0m power \u001b[39m=\u001b[39m \u001b[39mint\u001b[39m(power_folder[\u001b[39m0\u001b[39m:\u001b[39m2\u001b[39m])\n\u001b[0;32m----> 4\u001b[0m gamma_list \u001b[39m=\u001b[39m [get_gamma(detuning) \u001b[39mfor\u001b[39;00m detuning \u001b[39min\u001b[39;00m detunings[\u001b[39m0\u001b[39m:\u001b[39m1\u001b[39m]]\n\u001b[1;32m      5\u001b[0m output_gamma(detunings, gamma_list, data_set, power_folder)\n",
+      "Cell \u001b[0;32mIn[25], line 4\u001b[0m, in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m      2\u001b[0m detuning_files_dict, detunings \u001b[39m=\u001b[39m get_detuning_files_dict(data_set, power_folder)\n\u001b[1;32m      3\u001b[0m power \u001b[39m=\u001b[39m \u001b[39mint\u001b[39m(power_folder[\u001b[39m0\u001b[39m:\u001b[39m2\u001b[39m])\n\u001b[0;32m----> 4\u001b[0m gamma_list \u001b[39m=\u001b[39m [get_gamma(detuning) \u001b[39mfor\u001b[39;00m detuning \u001b[39min\u001b[39;00m detunings[\u001b[39m0\u001b[39m:\u001b[39m1\u001b[39m]]\n\u001b[1;32m      5\u001b[0m output_gamma(detunings, gamma_list, data_set, power_folder)\n",
+      "Cell \u001b[0;32mIn[15], line 10\u001b[0m, in \u001b[0;36mget_gamma\u001b[0;34m(detuning)\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mget_gamma\u001b[39m(detuning):\n\u001b[0;32m---> 10\u001b[0m     file_results \u001b[39m=\u001b[39m [get_voltage_from_file(file) \u001b[39mfor\u001b[39;00m file \u001b[39min\u001b[39;00m detuning_files_dict[detuning]]\n\u001b[1;32m     11\u001b[0m     S21_list_detuning, index_maxima \u001b[39m=\u001b[39m \u001b[39mzip\u001b[39m(\u001b[39m*\u001b[39mfile_results)\n\u001b[1;32m     12\u001b[0m     frequency \u001b[39m=\u001b[39m get_frequency(detuning)\n",
+      "\u001b[0;31mKeyError\u001b[0m: 8000000"
      ]
     }
    ],
    "source": [
-    "detuning_files_dict, detunings = get_detuning_files_dict()\n",
-    "power = 27\n",
-    "gamma = [get_gamma(detuning) for detuning in detunings]\n",
-    "print(gamma)"
+    "def process_experiment(data_set, power_folder):\n",
+    "    detuning_files_dict, detunings = get_detuning_files_dict(data_set, power_folder)\n",
+    "    power = int(power_folder[0:2])\n",
+    "    gamma_list = [get_gamma(detuning) for detuning in detunings[0:1]]\n",
+    "    output_gamma(detunings, gamma_list, data_set, power_folder)\n",
+    "\n",
+    "data_set = \"15112022\"\n",
+    "path = os.path.join(os.path.dirname(os.path.dirname(sys.path[0])), data_set)\n",
+    "for power_folder in os.listdir(path):\n",
+    "    process_experiment(data_set, \"27_dBm\")"
    ]
   }
  ],
