--- a/Side Band Fitting.ipynb
+++ b/Side Band Fitting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 71,
    "id": "e60c7d18",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 72,
    "id": "275ef32e",
    "metadata": {},
    "outputs": [],
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 73,
    "id": "21e1e5dc",
    "metadata": {},
    "outputs": [],
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 74,
    "id": "22dd2010",
    "metadata": {},
    "outputs": [],
@@ -86,7 +86,7 @@
     "    voltage = array(voltage)\n",
     "    return voltage\n",
     "\n",
-    "def get_frequency(detuning):\n",
+    "def get_frequency(detuning, detuning_files_dict):\n",
     "    file = detuning_files_dict[detuning][0]\n",
     "    raw_data = get_file_contents(file)\n",
     "    frequency = [float(line.strip().split('\\t')[1]) for line in raw_data[1:]]\n",
@@ -105,12 +105,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 75,
    "id": "adf50abd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_voltage_from_file(file):\n",
+    "def get_voltage_from_file(file, power):\n",
     "    raw_data = get_file_contents(file)\n",
     "    voltage = get_voltage(raw_data)\n",
     "    voltage = convert_to_mW(voltage)\n",
@@ -118,10 +118,10 @@
     "    index_maximum = get_index_maximum(voltage)\n",
     "    return S21_detuning, index_maximum\n",
     "\n",
-    "def get_gamma(detuning):\n",
-    "    file_results = [get_voltage_from_file(file) for file in detuning_files_dict[detuning]]\n",
+    "def get_gamma(detuning, detuning_files_dict, power):\n",
+    "    file_results = [get_voltage_from_file(file, power) for file in detuning_files_dict[detuning]]\n",
     "    S21_list_detuning, index_maxima = zip(*file_results)\n",
-    "    frequency = get_frequency(detuning)\n",
+    "    frequency = get_frequency(detuning, detuning_files_dict)\n",
     "    frequency = get_offset_frequency(frequency, index_maxima)\n",
     "    S21_offset_list = get_S21_offset_list(S21_list_detuning, index_maxima)\n",
     "    S21_average = average(S21_offset_list, axis=0)\n",
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 76,
    "id": "70e6cc43",
    "metadata": {},
    "outputs": [],
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 77,
    "id": "ed992e6d",
    "metadata": {},
    "outputs": [],
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 78,
    "id": "654ab8c0",
    "metadata": {},
    "outputs": [],
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 79,
    "id": "eaa27aa1",
    "metadata": {},
    "outputs": [],
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 87,
    "id": "9975abe5",
    "metadata": {},
    "outputs": [],
@@ -259,10 +259,10 @@
     "    file_name = os.path.join(output_path, f\"gamma_vs_detuning_{data_set}_{power_folder}\")\n",
     "    with open(file_name, \"w+\") as file:\n",
     "        for detuning, gamma, in zip(detunings, gamma_list):\n",
-    "            file.writelines(f\"{detuning}    {gamma}\")\n",
+    "            file.writelines(f\"{detuning}    {gamma}\\n\")\n",
     "\n",
     "def prepare_output_path():\n",
-    "    parent_path = os.path.dirname(os.path.dirname(sys.path[0]))\n",
+    "    parent_path = os.path.dirname(sys.path[0])\n",
     "    output_path = os.path.join(parent_path, \"Gamma Results\")\n",
     "    if os.path.isdir(output_path) is False:\n",
     "        os.mkdir(output_path)\n",
@@ -271,22 +271,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 88,
    "id": "d535ba84",
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "8000000",
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[25], line 10\u001b[0m\n\u001b[1;32m      8\u001b[0m path \u001b[39m=\u001b[39m os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mjoin(os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mdirname(os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mdirname(sys\u001b[39m.\u001b[39mpath[\u001b[39m0\u001b[39m])), data_set)\n\u001b[1;32m      9\u001b[0m \u001b[39mfor\u001b[39;00m power_folder \u001b[39min\u001b[39;00m os\u001b[39m.\u001b[39mlistdir(path):\n\u001b[0;32m---> 10\u001b[0m     process_experiment(data_set, power_folder)\n",
-      "Cell \u001b[0;32mIn[25], line 4\u001b[0m, in \u001b[0;36mprocess_experiment\u001b[0;34m(data_set, power_folder)\u001b[0m\n\u001b[1;32m      2\u001b[0m detuning_files_dict, detunings \u001b[39m=\u001b[39m get_detuning_files_dict(data_set, power_folder)\n\u001b[1;32m      3\u001b[0m power \u001b[39m=\u001b[39m \u001b[39mint\u001b[39m(power_folder[\u001b[39m0\u001b[39m:\u001b[39m2\u001b[39m])\n\u001b[0;32m----> 4\u001b[0m gamma_list \u001b[39m=\u001b[39m [get_gamma(detuning) \u001b[39mfor\u001b[39;00m detuning \u001b[39min\u001b[39;00m detunings[\u001b[39m0\u001b[39m:\u001b[39m1\u001b[39m]]\n\u001b[1;32m      5\u001b[0m output_gamma(detunings, gamma_list, data_set, power_folder)\n",
-      "Cell \u001b[0;32mIn[25], line 4\u001b[0m, in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m      2\u001b[0m detuning_files_dict, detunings \u001b[39m=\u001b[39m get_detuning_files_dict(data_set, power_folder)\n\u001b[1;32m      3\u001b[0m power \u001b[39m=\u001b[39m \u001b[39mint\u001b[39m(power_folder[\u001b[39m0\u001b[39m:\u001b[39m2\u001b[39m])\n\u001b[0;32m----> 4\u001b[0m gamma_list \u001b[39m=\u001b[39m [get_gamma(detuning) \u001b[39mfor\u001b[39;00m detuning \u001b[39min\u001b[39;00m detunings[\u001b[39m0\u001b[39m:\u001b[39m1\u001b[39m]]\n\u001b[1;32m      5\u001b[0m output_gamma(detunings, gamma_list, data_set, power_folder)\n",
-      "Cell \u001b[0;32mIn[15], line 10\u001b[0m, in \u001b[0;36mget_gamma\u001b[0;34m(detuning)\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mget_gamma\u001b[39m(detuning):\n\u001b[0;32m---> 10\u001b[0m     file_results \u001b[39m=\u001b[39m [get_voltage_from_file(file) \u001b[39mfor\u001b[39;00m file \u001b[39min\u001b[39;00m detuning_files_dict[detuning]]\n\u001b[1;32m     11\u001b[0m     S21_list_detuning, index_maxima \u001b[39m=\u001b[39m \u001b[39mzip\u001b[39m(\u001b[39m*\u001b[39mfile_results)\n\u001b[1;32m     12\u001b[0m     frequency \u001b[39m=\u001b[39m get_frequency(detuning)\n",
-      "\u001b[0;31mKeyError\u001b[0m: 8000000"
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[88], line 10\u001b[0m\n\u001b[1;32m      8\u001b[0m path \u001b[39m=\u001b[39m os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mjoin(os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mdirname(os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mdirname(sys\u001b[39m.\u001b[39mpath[\u001b[39m0\u001b[39m])), data_set)\n\u001b[1;32m      9\u001b[0m \u001b[39mfor\u001b[39;00m power_folder \u001b[39min\u001b[39;00m os\u001b[39m.\u001b[39mlistdir(path):\n\u001b[0;32m---> 10\u001b[0m     process_experiment(data_set, power_folder)\n",
+      "Cell \u001b[0;32mIn[88], line 4\u001b[0m, in \u001b[0;36mprocess_experiment\u001b[0;34m(data_set, power_folder)\u001b[0m\n\u001b[1;32m      2\u001b[0m detuning_files_dict, detunings \u001b[39m=\u001b[39m get_detuning_files_dict(data_set, power_folder)\n\u001b[1;32m      3\u001b[0m power \u001b[39m=\u001b[39m \u001b[39mint\u001b[39m(power_folder[\u001b[39m0\u001b[39m:\u001b[39m2\u001b[39m])\n\u001b[0;32m----> 4\u001b[0m gamma_list \u001b[39m=\u001b[39m [get_gamma(detuning, detuning_files_dict, power) \u001b[39mfor\u001b[39;00m detuning \u001b[39min\u001b[39;00m detunings]\n\u001b[1;32m      5\u001b[0m output_gamma(detunings, gamma_list, data_set, power_folder)\n",
+      "Cell \u001b[0;32mIn[88], line 4\u001b[0m, in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m      2\u001b[0m detuning_files_dict, detunings \u001b[39m=\u001b[39m get_detuning_files_dict(data_set, power_folder)\n\u001b[1;32m      3\u001b[0m power \u001b[39m=\u001b[39m \u001b[39mint\u001b[39m(power_folder[\u001b[39m0\u001b[39m:\u001b[39m2\u001b[39m])\n\u001b[0;32m----> 4\u001b[0m gamma_list \u001b[39m=\u001b[39m [get_gamma(detuning, detuning_files_dict, power) \u001b[39mfor\u001b[39;00m detuning \u001b[39min\u001b[39;00m detunings]\n\u001b[1;32m      5\u001b[0m output_gamma(detunings, gamma_list, data_set, power_folder)\n",
+      "Cell \u001b[0;32mIn[75], line 10\u001b[0m, in \u001b[0;36mget_gamma\u001b[0;34m(detuning, detuning_files_dict, power)\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mget_gamma\u001b[39m(detuning, detuning_files_dict, power):\n\u001b[0;32m---> 10\u001b[0m     file_results \u001b[39m=\u001b[39m [get_voltage_from_file(file, power) \u001b[39mfor\u001b[39;00m file \u001b[39min\u001b[39;00m detuning_files_dict[detuning]]\n\u001b[1;32m     11\u001b[0m     S21_list_detuning, index_maxima \u001b[39m=\u001b[39m \u001b[39mzip\u001b[39m(\u001b[39m*\u001b[39mfile_results)\n\u001b[1;32m     12\u001b[0m     frequency \u001b[39m=\u001b[39m get_frequency(detuning, detuning_files_dict)\n",
+      "Cell \u001b[0;32mIn[75], line 10\u001b[0m, in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mget_gamma\u001b[39m(detuning, detuning_files_dict, power):\n\u001b[0;32m---> 10\u001b[0m     file_results \u001b[39m=\u001b[39m [get_voltage_from_file(file, power) \u001b[39mfor\u001b[39;00m file \u001b[39min\u001b[39;00m detuning_files_dict[detuning]]\n\u001b[1;32m     11\u001b[0m     S21_list_detuning, index_maxima \u001b[39m=\u001b[39m \u001b[39mzip\u001b[39m(\u001b[39m*\u001b[39mfile_results)\n\u001b[1;32m     12\u001b[0m     frequency \u001b[39m=\u001b[39m get_frequency(detuning, detuning_files_dict)\n",
+      "Cell \u001b[0;32mIn[75], line 6\u001b[0m, in \u001b[0;36mget_voltage_from_file\u001b[0;34m(file, power)\u001b[0m\n\u001b[1;32m      4\u001b[0m voltage \u001b[39m=\u001b[39m convert_to_mW(voltage)\n\u001b[1;32m      5\u001b[0m S21_detuning \u001b[39m=\u001b[39m get_S21_detuning(voltage, power)\n\u001b[0;32m----> 6\u001b[0m index_maximum \u001b[39m=\u001b[39m get_index_maximum(voltage)\n\u001b[1;32m      7\u001b[0m \u001b[39mreturn\u001b[39;00m S21_detuning, index_maximum\n",
+      "Cell \u001b[0;32mIn[76], line 2\u001b[0m, in \u001b[0;36mget_index_maximum\u001b[0;34m(voltage)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mget_index_maximum\u001b[39m(voltage):\n\u001b[0;32m----> 2\u001b[0m     voltage \u001b[39m=\u001b[39m get_moving_average(voltage, \u001b[39m6\u001b[39;49m)\n\u001b[1;32m      3\u001b[0m     max_index \u001b[39m=\u001b[39m argmax(array(voltage))\n\u001b[1;32m      4\u001b[0m     \u001b[39mreturn\u001b[39;00m max_index\n",
+      "Cell \u001b[0;32mIn[76], line 10\u001b[0m, in \u001b[0;36mget_moving_average\u001b[0;34m(points, window_width)\u001b[0m\n\u001b[1;32m      7\u001b[0m N \u001b[39m=\u001b[39m \u001b[39mlen\u001b[39m(points)\n\u001b[1;32m      8\u001b[0m window_points \u001b[39m=\u001b[39m [[points[inside_window(i\u001b[39m+\u001b[39mj, N)] \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(window_width)]\n\u001b[1;32m      9\u001b[0m                  \u001b[39mfor\u001b[39;00m j \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(N)]\n\u001b[0;32m---> 10\u001b[0m moving_average \u001b[39m=\u001b[39m array([\u001b[39msum\u001b[39m(window)\u001b[39m/\u001b[39mwindow_width \u001b[39mfor\u001b[39;00m window \u001b[39min\u001b[39;00m window_points])\n\u001b[1;32m     11\u001b[0m \u001b[39mreturn\u001b[39;00m moving_average\n",
+      "Cell \u001b[0;32mIn[76], line 10\u001b[0m, in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m      7\u001b[0m N \u001b[39m=\u001b[39m \u001b[39mlen\u001b[39m(points)\n\u001b[1;32m      8\u001b[0m window_points \u001b[39m=\u001b[39m [[points[inside_window(i\u001b[39m+\u001b[39mj, N)] \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(window_width)]\n\u001b[1;32m      9\u001b[0m                  \u001b[39mfor\u001b[39;00m j \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(N)]\n\u001b[0;32m---> 10\u001b[0m moving_average \u001b[39m=\u001b[39m array([\u001b[39msum\u001b[39;49m(window)\u001b[39m/\u001b[39mwindow_width \u001b[39mfor\u001b[39;00m window \u001b[39min\u001b[39;00m window_points])\n\u001b[1;32m     11\u001b[0m \u001b[39mreturn\u001b[39;00m moving_average\n",
+      "File \u001b[0;32m<__array_function__ internals>:200\u001b[0m, in \u001b[0;36msum\u001b[0;34m(*args, **kwargs)\u001b[0m\n",
+      "File \u001b[0;32m~/.local/lib/python3.8/site-packages/numpy/core/fromnumeric.py:2324\u001b[0m, in \u001b[0;36msum\u001b[0;34m(a, axis, dtype, out, keepdims, initial, where)\u001b[0m\n\u001b[1;32m   2321\u001b[0m         \u001b[39mreturn\u001b[39;00m out\n\u001b[1;32m   2322\u001b[0m     \u001b[39mreturn\u001b[39;00m res\n\u001b[0;32m-> 2324\u001b[0m \u001b[39mreturn\u001b[39;00m _wrapreduction(a, np\u001b[39m.\u001b[39;49madd, \u001b[39m'\u001b[39;49m\u001b[39msum\u001b[39;49m\u001b[39m'\u001b[39;49m, axis, dtype, out, keepdims\u001b[39m=\u001b[39;49mkeepdims,\n\u001b[1;32m   2325\u001b[0m                       initial\u001b[39m=\u001b[39;49minitial, where\u001b[39m=\u001b[39;49mwhere)\n",
+      "File \u001b[0;32m~/.local/lib/python3.8/site-packages/numpy/core/fromnumeric.py:86\u001b[0m, in \u001b[0;36m_wrapreduction\u001b[0;34m(obj, ufunc, method, axis, dtype, out, **kwargs)\u001b[0m\n\u001b[1;32m     83\u001b[0m         \u001b[39melse\u001b[39;00m:\n\u001b[1;32m     84\u001b[0m             \u001b[39mreturn\u001b[39;00m reduction(axis\u001b[39m=\u001b[39maxis, out\u001b[39m=\u001b[39mout, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mpasskwargs)\n\u001b[0;32m---> 86\u001b[0m \u001b[39mreturn\u001b[39;00m ufunc\u001b[39m.\u001b[39;49mreduce(obj, axis, dtype, out, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mpasskwargs)\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -294,13 +302,13 @@
     "def process_experiment(data_set, power_folder):\n",
     "    detuning_files_dict, detunings = get_detuning_files_dict(data_set, power_folder)\n",
     "    power = int(power_folder[0:2])\n",
-    "    gamma_list = [get_gamma(detuning) for detuning in detunings[0:1]]\n",
+    "    gamma_list = [get_gamma(detuning, detuning_files_dict, power) for detuning in detunings]\n",
     "    output_gamma(detunings, gamma_list, data_set, power_folder)\n",
     "\n",
     "data_set = \"15112022\"\n",
     "path = os.path.join(os.path.dirname(os.path.dirname(sys.path[0])), data_set)\n",
     "for power_folder in os.listdir(path):\n",
-    "    process_experiment(data_set, \"27_dBm\")"
+    "    process_experiment(data_set, power_folder)"
    ]
   }
  ],
