Generates basic plot of gamma

--- a/Side Band Fitting.ipynb
+++ b/Side Band Fitting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 256,
    "id": "e60c7d18",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 257,
    "id": "275ef32e",
    "metadata": {},
    "outputs": [],
@@ -39,17 +39,28 @@
     "def get_file_detuning(file):\n",
     "    underscore_locations = [index for index, character in enumerate(file)\n",
     "                            if character == \"_\"]\n",
-    "    left = underscore_locations[9] + 1\n",
-    "    right = underscore_locations[10]\n",
-    "    return int(float(file[left:right]))\n",
+    "    left = underscore_locations[10] + 1\n",
+    "    right = underscore_locations[11]\n",
+    "    detuning = file[left:right]\n",
+    "    detuning = int(float(detuning))\n",
+    "    return detuning\n",
     "\n",
-    "def get_files(data_set, power_folder):\n",
+    "def get_files_1(data_set, power_folder):\n",
     "    os.chdir(f'/home/henry/Documents/Physics Internship/{data_set}/{power_folder}/Spectrum/')\n",
     "    files= glob.glob('*.txt')\n",
     "    return files\n",
     "\n",
+    "def get_files_2(data_set, power_folder):\n",
+    "    power_folder_path = f'/home/henry/Documents/Physics Internship/{data_set}/Spectrum/{power_folder}'\n",
+    "    files = []\n",
+    "    for folder in os.listdir(power_folder_path):\n",
+    "        path = os.path.join(power_folder_path, folder)\n",
+    "        for file in os.listdir(path):\n",
+    "            files.append(os.path.join(power_folder_path, folder, file))\n",
+    "    return files\n",
+    "\n",
     "def get_detuning_files_dict(data_set, power_folder):\n",
-    "    files = get_files(data_set, power_folder)\n",
+    "    files = get_files_2(data_set, power_folder)\n",
     "    detunings = sorted(list(set([get_file_detuning(file) for file in files])), reverse=True)\n",
     "    detuning_files_dict = {detuning: [] for detuning in detunings}\n",
     "    for file in files:\n",
@@ -64,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 258,
    "id": "21e1e5dc",
    "metadata": {},
    "outputs": [],
@@ -76,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 259,
    "id": "22dd2010",
    "metadata": {},
    "outputs": [],
@@ -105,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 260,
    "id": "adf50abd",
    "metadata": {},
    "outputs": [],
@@ -132,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 261,
    "id": "70e6cc43",
    "metadata": {},
    "outputs": [],
@@ -159,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 262,
    "id": "ed992e6d",
    "metadata": {},
    "outputs": [],
@@ -186,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 263,
    "id": "654ab8c0",
    "metadata": {},
    "outputs": [],
@@ -221,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 264,
    "id": "eaa27aa1",
    "metadata": {},
    "outputs": [],
@@ -249,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 265,
    "id": "9975abe5",
    "metadata": {},
    "outputs": [],
@@ -258,8 +269,9 @@
     "    output_path = prepare_output_path()\n",
     "    file_name = os.path.join(output_path, f\"gamma_vs_detuning_{data_set}_{power_folder}\")\n",
     "    with open(file_name, \"w+\") as file:\n",
+    "        file.writelines(\"Detuning\\tGamma\\n\")\n",
     "        for detuning, gamma, in zip(detunings, gamma_list):\n",
-    "            file.writelines(f\"{detuning}    {gamma}\\n\")\n",
+    "            file.writelines(f\"{detuning}\\t{gamma}\\n\")\n",
     "\n",
     "def prepare_output_path():\n",
     "    parent_path = os.path.dirname(sys.path[0])\n",
@@ -271,33 +283,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 266,
    "id": "d535ba84",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[88], line 10\u001b[0m\n\u001b[1;32m      8\u001b[0m path \u001b[39m=\u001b[39m os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mjoin(os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mdirname(os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mdirname(sys\u001b[39m.\u001b[39mpath[\u001b[39m0\u001b[39m])), data_set)\n\u001b[1;32m      9\u001b[0m \u001b[39mfor\u001b[39;00m power_folder \u001b[39min\u001b[39;00m os\u001b[39m.\u001b[39mlistdir(path):\n\u001b[0;32m---> 10\u001b[0m     process_experiment(data_set, power_folder)\n",
-      "Cell \u001b[0;32mIn[88], line 4\u001b[0m, in \u001b[0;36mprocess_experiment\u001b[0;34m(data_set, power_folder)\u001b[0m\n\u001b[1;32m      2\u001b[0m detuning_files_dict, detunings \u001b[39m=\u001b[39m get_detuning_files_dict(data_set, power_folder)\n\u001b[1;32m      3\u001b[0m power \u001b[39m=\u001b[39m \u001b[39mint\u001b[39m(power_folder[\u001b[39m0\u001b[39m:\u001b[39m2\u001b[39m])\n\u001b[0;32m----> 4\u001b[0m gamma_list \u001b[39m=\u001b[39m [get_gamma(detuning, detuning_files_dict, power) \u001b[39mfor\u001b[39;00m detuning \u001b[39min\u001b[39;00m detunings]\n\u001b[1;32m      5\u001b[0m output_gamma(detunings, gamma_list, data_set, power_folder)\n",
-      "Cell \u001b[0;32mIn[88], line 4\u001b[0m, in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m      2\u001b[0m detuning_files_dict, detunings \u001b[39m=\u001b[39m get_detuning_files_dict(data_set, power_folder)\n\u001b[1;32m      3\u001b[0m power \u001b[39m=\u001b[39m \u001b[39mint\u001b[39m(power_folder[\u001b[39m0\u001b[39m:\u001b[39m2\u001b[39m])\n\u001b[0;32m----> 4\u001b[0m gamma_list \u001b[39m=\u001b[39m [get_gamma(detuning, detuning_files_dict, power) \u001b[39mfor\u001b[39;00m detuning \u001b[39min\u001b[39;00m detunings]\n\u001b[1;32m      5\u001b[0m output_gamma(detunings, gamma_list, data_set, power_folder)\n",
-      "Cell \u001b[0;32mIn[75], line 10\u001b[0m, in \u001b[0;36mget_gamma\u001b[0;34m(detuning, detuning_files_dict, power)\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mget_gamma\u001b[39m(detuning, detuning_files_dict, power):\n\u001b[0;32m---> 10\u001b[0m     file_results \u001b[39m=\u001b[39m [get_voltage_from_file(file, power) \u001b[39mfor\u001b[39;00m file \u001b[39min\u001b[39;00m detuning_files_dict[detuning]]\n\u001b[1;32m     11\u001b[0m     S21_list_detuning, index_maxima \u001b[39m=\u001b[39m \u001b[39mzip\u001b[39m(\u001b[39m*\u001b[39mfile_results)\n\u001b[1;32m     12\u001b[0m     frequency \u001b[39m=\u001b[39m get_frequency(detuning, detuning_files_dict)\n",
-      "Cell \u001b[0;32mIn[75], line 10\u001b[0m, in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mget_gamma\u001b[39m(detuning, detuning_files_dict, power):\n\u001b[0;32m---> 10\u001b[0m     file_results \u001b[39m=\u001b[39m [get_voltage_from_file(file, power) \u001b[39mfor\u001b[39;00m file \u001b[39min\u001b[39;00m detuning_files_dict[detuning]]\n\u001b[1;32m     11\u001b[0m     S21_list_detuning, index_maxima \u001b[39m=\u001b[39m \u001b[39mzip\u001b[39m(\u001b[39m*\u001b[39mfile_results)\n\u001b[1;32m     12\u001b[0m     frequency \u001b[39m=\u001b[39m get_frequency(detuning, detuning_files_dict)\n",
-      "Cell \u001b[0;32mIn[75], line 6\u001b[0m, in \u001b[0;36mget_voltage_from_file\u001b[0;34m(file, power)\u001b[0m\n\u001b[1;32m      4\u001b[0m voltage \u001b[39m=\u001b[39m convert_to_mW(voltage)\n\u001b[1;32m      5\u001b[0m S21_detuning \u001b[39m=\u001b[39m get_S21_detuning(voltage, power)\n\u001b[0;32m----> 6\u001b[0m index_maximum \u001b[39m=\u001b[39m get_index_maximum(voltage)\n\u001b[1;32m      7\u001b[0m \u001b[39mreturn\u001b[39;00m S21_detuning, index_maximum\n",
-      "Cell \u001b[0;32mIn[76], line 2\u001b[0m, in \u001b[0;36mget_index_maximum\u001b[0;34m(voltage)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mget_index_maximum\u001b[39m(voltage):\n\u001b[0;32m----> 2\u001b[0m     voltage \u001b[39m=\u001b[39m get_moving_average(voltage, \u001b[39m6\u001b[39;49m)\n\u001b[1;32m      3\u001b[0m     max_index \u001b[39m=\u001b[39m argmax(array(voltage))\n\u001b[1;32m      4\u001b[0m     \u001b[39mreturn\u001b[39;00m max_index\n",
-      "Cell \u001b[0;32mIn[76], line 10\u001b[0m, in \u001b[0;36mget_moving_average\u001b[0;34m(points, window_width)\u001b[0m\n\u001b[1;32m      7\u001b[0m N \u001b[39m=\u001b[39m \u001b[39mlen\u001b[39m(points)\n\u001b[1;32m      8\u001b[0m window_points \u001b[39m=\u001b[39m [[points[inside_window(i\u001b[39m+\u001b[39mj, N)] \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(window_width)]\n\u001b[1;32m      9\u001b[0m                  \u001b[39mfor\u001b[39;00m j \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(N)]\n\u001b[0;32m---> 10\u001b[0m moving_average \u001b[39m=\u001b[39m array([\u001b[39msum\u001b[39m(window)\u001b[39m/\u001b[39mwindow_width \u001b[39mfor\u001b[39;00m window \u001b[39min\u001b[39;00m window_points])\n\u001b[1;32m     11\u001b[0m \u001b[39mreturn\u001b[39;00m moving_average\n",
-      "Cell \u001b[0;32mIn[76], line 10\u001b[0m, in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m      7\u001b[0m N \u001b[39m=\u001b[39m \u001b[39mlen\u001b[39m(points)\n\u001b[1;32m      8\u001b[0m window_points \u001b[39m=\u001b[39m [[points[inside_window(i\u001b[39m+\u001b[39mj, N)] \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(window_width)]\n\u001b[1;32m      9\u001b[0m                  \u001b[39mfor\u001b[39;00m j \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(N)]\n\u001b[0;32m---> 10\u001b[0m moving_average \u001b[39m=\u001b[39m array([\u001b[39msum\u001b[39;49m(window)\u001b[39m/\u001b[39mwindow_width \u001b[39mfor\u001b[39;00m window \u001b[39min\u001b[39;00m window_points])\n\u001b[1;32m     11\u001b[0m \u001b[39mreturn\u001b[39;00m moving_average\n",
-      "File \u001b[0;32m<__array_function__ internals>:200\u001b[0m, in \u001b[0;36msum\u001b[0;34m(*args, **kwargs)\u001b[0m\n",
-      "File \u001b[0;32m~/.local/lib/python3.8/site-packages/numpy/core/fromnumeric.py:2324\u001b[0m, in \u001b[0;36msum\u001b[0;34m(a, axis, dtype, out, keepdims, initial, where)\u001b[0m\n\u001b[1;32m   2321\u001b[0m         \u001b[39mreturn\u001b[39;00m out\n\u001b[1;32m   2322\u001b[0m     \u001b[39mreturn\u001b[39;00m res\n\u001b[0;32m-> 2324\u001b[0m \u001b[39mreturn\u001b[39;00m _wrapreduction(a, np\u001b[39m.\u001b[39;49madd, \u001b[39m'\u001b[39;49m\u001b[39msum\u001b[39;49m\u001b[39m'\u001b[39;49m, axis, dtype, out, keepdims\u001b[39m=\u001b[39;49mkeepdims,\n\u001b[1;32m   2325\u001b[0m                       initial\u001b[39m=\u001b[39;49minitial, where\u001b[39m=\u001b[39;49mwhere)\n",
-      "File \u001b[0;32m~/.local/lib/python3.8/site-packages/numpy/core/fromnumeric.py:86\u001b[0m, in \u001b[0;36m_wrapreduction\u001b[0;34m(obj, ufunc, method, axis, dtype, out, **kwargs)\u001b[0m\n\u001b[1;32m     83\u001b[0m         \u001b[39melse\u001b[39;00m:\n\u001b[1;32m     84\u001b[0m             \u001b[39mreturn\u001b[39;00m reduction(axis\u001b[39m=\u001b[39maxis, out\u001b[39m=\u001b[39mout, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mpasskwargs)\n\u001b[0;32m---> 86\u001b[0m \u001b[39mreturn\u001b[39;00m ufunc\u001b[39m.\u001b[39;49mreduce(obj, axis, dtype, out, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mpasskwargs)\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def process_experiment(data_set, power_folder):\n",
     "    detuning_files_dict, detunings = get_detuning_files_dict(data_set, power_folder)\n",
@@ -305,8 +294,8 @@
     "    gamma_list = [get_gamma(detuning, detuning_files_dict, power) for detuning in detunings]\n",
     "    output_gamma(detunings, gamma_list, data_set, power_folder)\n",
     "\n",
-    "data_set = \"15112022\"\n",
-    "path = os.path.join(os.path.dirname(os.path.dirname(sys.path[0])), data_set)\n",
+    "data_set = \"16112022_overnight\"\n",
+    "path = os.path.join(os.path.dirname(os.path.dirname(sys.path[0])), data_set, \"Spectrum\")\n",
     "for power_folder in os.listdir(path):\n",
     "    process_experiment(data_set, power_folder)"
    ]
