--- a/Side Band Fitting.ipynb
+++ b/Side Band Fitting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 46,
    "id": "e60c7d18",
    "metadata": {},
    "outputs": [],
@@ -31,12 +31,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 58,
    "id": "275ef32e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_file_detuning(file):\n",
+    "def get_file_detuning_1(file):\n",
+    "    underscore_locations = [index for index, character in enumerate(file)\n",
+    "                            if character == \"_\"]\n",
+    "    left = underscore_locations[9] + 1\n",
+    "    right = underscore_locations[10]\n",
+    "    detuning = file[left:right]\n",
+    "    detuning = int(float(detuning))\n",
+    "    return detuning\n",
+    "\n",
+    "def get_file_detuning_2(file):\n",
     "    underscore_locations = [index for index, character in enumerate(file)\n",
     "                            if character == \"_\"]\n",
     "    left = underscore_locations[10] + 1\n",
@@ -46,12 +55,16 @@
     "    return detuning\n",
     "\n",
     "def get_files_1(data_set, power_folder):\n",
-    "    os.chdir(f'/home/henry/Documents/Physics Internship/{data_set}/{power_folder}/Spectrum/')\n",
+    "    parent_folder = os.path.dirname(os.path.dirname(sys.path[0]))\n",
+    "    path = os.path.join(parent_folder, data_set, power_folder, \"Spectrum\")\n",
+    "    print(data_set, power_folder, path)\n",
+    "    os.chdir(path)\n",
     "    files= glob.glob('*.txt')\n",
     "    return files\n",
     "\n",
     "def get_files_2(data_set, power_folder):\n",
-    "    power_folder_path = f'/home/henry/Documents/Physics Internship/{data_set}/Spectrum/{power_folder}'\n",
+    "    parent_folder = os.path.dirname(os.path.dirname(sys.path[0]))\n",
+    "    power_folder_path = os.path.join(parent_folder, data_set, \"Spectrum\", power_folder)\n",
     "    files = []\n",
     "    for folder in os.listdir(power_folder_path):\n",
     "        path = os.path.join(power_folder_path, folder)\n",
@@ -59,12 +72,20 @@
     "            files.append(os.path.join(power_folder_path, folder, file))\n",
     "    return files\n",
     "\n",
-    "def get_detuning_files_dict(data_set, power_folder):\n",
-    "    files = get_files_2(data_set, power_folder)\n",
-    "    detunings = sorted(list(set([get_file_detuning(file) for file in files])), reverse=True)\n",
+    "def get_detuning_files_dict_1(data_set, power_folder):\n",
+    "    files = get_files_1(data_set, power_folder)\n",
+    "    detunings = sorted(list(set([get_file_detuning_1(file) for file in files])), reverse=True)\n",
     "    detuning_files_dict = {detuning: [] for detuning in detunings}\n",
     "    for file in files:\n",
-    "        detuning_files_dict[get_file_detuning(file)].append(file)\n",
+    "        detuning_files_dict[get_file_detuning_1(file)].append(file)\n",
+    "    return detuning_files_dict, detunings\n",
+    "\n",
+    "def get_detuning_files_dict_2(data_set, power_folder):\n",
+    "    files = get_files_2(data_set, power_folder)\n",
+    "    detunings = sorted(list(set([get_file_detuning_2(file) for file in files])), reverse=True)\n",
+    "    detuning_files_dict = {detuning: [] for detuning in detunings}\n",
+    "    for file in files:\n",
+    "        detuning_files_dict[get_file_detuning_2(file)].append(file)\n",
     "    return detuning_files_dict, detunings\n",
     "\n",
     "def get_file_contents(file):\n",
@@ -75,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 48,
    "id": "21e1e5dc",
    "metadata": {},
    "outputs": [],
@@ -87,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 49,
    "id": "22dd2010",
    "metadata": {},
    "outputs": [],
@@ -116,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 50,
    "id": "adf50abd",
    "metadata": {},
    "outputs": [],
@@ -143,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 51,
    "id": "70e6cc43",
    "metadata": {},
    "outputs": [],
@@ -170,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 52,
    "id": "ed992e6d",
    "metadata": {},
    "outputs": [],
@@ -197,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 53,
    "id": "654ab8c0",
    "metadata": {},
    "outputs": [],
@@ -232,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 54,
    "id": "eaa27aa1",
    "metadata": {},
    "outputs": [],
@@ -260,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 55,
    "id": "9975abe5",
    "metadata": {},
    "outputs": [],
@@ -283,27 +304,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 56,
    "id": "d535ba84",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def process_experiment(data_set, power_folder):\n",
-    "    detuning_files_dict, detunings = get_detuning_files_dict(data_set, power_folder)\n",
+    "def process_experiment_1(data_set, power_folder):\n",
+    "    detuning_files_dict, detunings = get_detuning_files_dict_1(data_set, power_folder)\n",
     "    power = int(power_folder[0:2])\n",
     "    gamma_list = [get_gamma(detuning, detuning_files_dict, power) for detuning in detunings]\n",
     "    output_gamma(detunings, gamma_list, data_set, power_folder)\n",
     "\n",
-    "data_set = \"16112022_overnight\"\n",
-    "path = os.path.join(os.path.dirname(os.path.dirname(sys.path[0])), data_set, \"Spectrum\")\n",
-    "for power_folder in os.listdir(path):\n",
-    "    process_experiment(data_set, power_folder)"
+    "def process_experiment_2(data_set, power_folder):\n",
+    "    detuning_files_dict, detunings = get_detuning_files_dict_2(data_set, power_folder)\n",
+    "    power = int(power_folder[0:2])\n",
+    "    gamma_list = [get_gamma(detuning, detuning_files_dict, power) for detuning in detunings]\n",
+    "    output_gamma(detunings, gamma_list, data_set, power_folder)\n",
+    "\n",
+    "def iterate_through_power_levels_1(data_set):\n",
+    "    path = os.path.join(os.path.dirname(os.path.dirname(sys.path[0])), data_set)\n",
+    "    for power_folder in os.listdir(path):\n",
+    "        process_experiment_1(data_set, power_folder)\n",
+    "\n",
+    "def iterate_through_power_levels_2(data_set):\n",
+    "    path = os.path.join(os.path.dirname(os.path.dirname(sys.path[0])), data_set, \"Spectrum\")\n",
+    "    for power_folder in os.listdir(path):\n",
+    "        process_experiment_1(data_set, power_folder)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "8b894080",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15112022 26_dBm /home/henry/Documents/Physics Internship/15112022/26_dBm/Spectrum\n",
+      "15112022 28_dBm /home/henry/Documents/Physics Internship/15112022/28_dBm/Spectrum\n",
+      "15112022 27_dBm /home/henry/Documents/Physics Internship/15112022/27_dBm/Spectrum\n",
+      "15112022 27_dBm_overnight /home/henry/Documents/Physics Internship/15112022/27_dBm_overnight/Spectrum\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "For data sets in the same format as 15112022, use version 1 of functions\n",
+    "For data sets in the same format as 16112022, use version 2 of functions\n",
+    "You should only ever need to change the number on iterate_through_power_levels_i\n",
+    "\"\"\"\n",
+    "data_set = \"15112022\"\n",
+    "iterate_through_power_levels_1(data_set)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
