--- a/Side Band Fitting.ipynb
+++ b/Side Band Fitting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 111,
    "id": "e60c7d18",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 112,
    "id": "275ef32e",
    "metadata": {},
    "outputs": [],
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 113,
    "id": "22dd2010",
    "metadata": {},
    "outputs": [],
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 114,
    "id": "adf50abd",
    "metadata": {},
    "outputs": [],
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 115,
    "id": "70e6cc43",
    "metadata": {},
    "outputs": [],
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 116,
    "id": "ed992e6d",
    "metadata": {},
    "outputs": [],
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 117,
    "id": "654ab8c0",
    "metadata": {},
    "outputs": [],
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 118,
    "id": "eaa27aa1",
    "metadata": {},
    "outputs": [],
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 119,
    "id": "9975abe5",
    "metadata": {},
    "outputs": [],
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 120,
    "id": "d535ba84",
    "metadata": {},
    "outputs": [],
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 121,
    "id": "8b894080",
    "metadata": {},
    "outputs": [
@@ -433,27 +433,29 @@
      "output_type": "stream",
      "text": [
       "15112022 26_dBm /home/henry/Documents/Physics Internship/15112022/26_dBm/Spectrum\n",
-      "15112022 28_dBm /home/henry/Documents/Physics Internship/15112022/28_dBm/Spectrum\n",
-      "15112022 27_dBm /home/henry/Documents/Physics Internship/15112022/27_dBm/Spectrum\n",
-      "15112022 27_dBm_overnight /home/henry/Documents/Physics Internship/15112022/27_dBm_overnight/Spectrum\n"
+      "[[ 5.77229577e+06  1.41441710e+18 -1.45297029e+02 -7.93954787e+13]\n",
+      " [ 1.41441710e+18  3.73795447e+29 -3.16800199e+13 -1.66538180e+25]\n",
+      " [-1.45297029e+02 -3.16800199e+13  6.72284221e-03  4.19425656e+09]\n",
+      " [-7.93954787e+13 -1.66538180e+25  4.19425656e+09  2.77449302e+28]]\n"
      ]
     },
     {
      "ename": "KeyboardInterrupt",
-     "evalue": "",
+     "evalue": "Interrupted by user",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[110], line 7\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[39mFor data sets in the same format as 15112022, use version 1 of functions\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[39mFor data sets in the same format as 16112022, use version 2 of functions\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[39mYou should only ever need to change the number on iterate_through_power_levels_i\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m      6\u001b[0m data_set \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m15112022\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m----> 7\u001b[0m iterate_through_power_levels_1(data_set)\n",
-      "Cell \u001b[0;32mIn[109], line 16\u001b[0m, in \u001b[0;36miterate_through_power_levels_1\u001b[0;34m(data_set)\u001b[0m\n\u001b[1;32m     14\u001b[0m path \u001b[39m=\u001b[39m os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mjoin(os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mdirname(os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mdirname(sys\u001b[39m.\u001b[39mpath[\u001b[39m0\u001b[39m])), data_set)\n\u001b[1;32m     15\u001b[0m \u001b[39mfor\u001b[39;00m power_folder \u001b[39min\u001b[39;00m os\u001b[39m.\u001b[39mlistdir(path):\n\u001b[0;32m---> 16\u001b[0m     process_experiment_1(data_set, power_folder)\n",
-      "Cell \u001b[0;32mIn[109], line 4\u001b[0m, in \u001b[0;36mprocess_experiment_1\u001b[0;34m(data_set, power_folder)\u001b[0m\n\u001b[1;32m      2\u001b[0m detuning_files_dict, detunings \u001b[39m=\u001b[39m get_detuning_files_dict_1(data_set, power_folder)\n\u001b[1;32m      3\u001b[0m power \u001b[39m=\u001b[39m \u001b[39mint\u001b[39m(power_folder[\u001b[39m0\u001b[39m:\u001b[39m2\u001b[39m])\n\u001b[0;32m----> 4\u001b[0m gamma_list \u001b[39m=\u001b[39m [get_gamma(detuning, detuning_files_dict, power) \u001b[39mfor\u001b[39;00m detuning \u001b[39min\u001b[39;00m detunings]\n\u001b[1;32m      5\u001b[0m output_gamma(detunings, gamma_list, data_set, power_folder)\n",
-      "Cell \u001b[0;32mIn[109], line 4\u001b[0m, in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m      2\u001b[0m detuning_files_dict, detunings \u001b[39m=\u001b[39m get_detuning_files_dict_1(data_set, power_folder)\n\u001b[1;32m      3\u001b[0m power \u001b[39m=\u001b[39m \u001b[39mint\u001b[39m(power_folder[\u001b[39m0\u001b[39m:\u001b[39m2\u001b[39m])\n\u001b[0;32m----> 4\u001b[0m gamma_list \u001b[39m=\u001b[39m [get_gamma(detuning, detuning_files_dict, power) \u001b[39mfor\u001b[39;00m detuning \u001b[39min\u001b[39;00m detunings]\n\u001b[1;32m      5\u001b[0m output_gamma(detunings, gamma_list, data_set, power_folder)\n",
-      "Cell \u001b[0;32mIn[103], line 2\u001b[0m, in \u001b[0;36mget_gamma\u001b[0;34m(detuning, detuning_files_dict, power)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mget_gamma\u001b[39m(detuning, detuning_files_dict, power):\n\u001b[0;32m----> 2\u001b[0m     frequency, S21_detunings \u001b[39m=\u001b[39m get_frequency_and_S21_detunings(detuning, detuning_files_dict, power)\n\u001b[1;32m      3\u001b[0m     frequency, S21_offsets \u001b[39m=\u001b[39m get_frequency_and_S21_offsets(frequency, S21_detunings)\n\u001b[1;32m      4\u001b[0m     S21_averages \u001b[39m=\u001b[39m get_S21_averages(S21_offsets)\n",
-      "Cell \u001b[0;32mIn[103], line 11\u001b[0m, in \u001b[0;36mget_frequency_and_S21_detunings\u001b[0;34m(detuning, detuning_files_dict, power)\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mget_frequency_and_S21_detunings\u001b[39m(detuning, detuning_files_dict, power):\n\u001b[1;32m      9\u001b[0m     S21_detunings \u001b[39m=\u001b[39m [get_S21_from_file(file, power)\n\u001b[1;32m     10\u001b[0m                          \u001b[39mfor\u001b[39;00m file \u001b[39min\u001b[39;00m detuning_files_dict[detuning]]\n\u001b[0;32m---> 11\u001b[0m     frequency \u001b[39m=\u001b[39m get_frequency(detuning, detuning_files_dict)\n\u001b[1;32m     12\u001b[0m     \u001b[39m# plot_detunings_raw(S21_list_detuning, frequency)\u001b[39;00m\n\u001b[1;32m     13\u001b[0m     \u001b[39mreturn\u001b[39;00m frequency, S21_detunings\n",
-      "Cell \u001b[0;32mIn[102], line 16\u001b[0m, in \u001b[0;36mget_frequency\u001b[0;34m(detuning, detuning_files_dict)\u001b[0m\n\u001b[1;32m     14\u001b[0m file \u001b[39m=\u001b[39m detuning_files_dict[detuning][\u001b[39m0\u001b[39m]\n\u001b[1;32m     15\u001b[0m raw_data \u001b[39m=\u001b[39m get_file_contents(file)\n\u001b[0;32m---> 16\u001b[0m frequency \u001b[39m=\u001b[39m [\u001b[39mfloat\u001b[39m(line\u001b[39m.\u001b[39mstrip()\u001b[39m.\u001b[39msplit(\u001b[39m'\u001b[39m\u001b[39m\\t\u001b[39;00m\u001b[39m'\u001b[39m)[\u001b[39m1\u001b[39m]) \u001b[39mfor\u001b[39;00m line \u001b[39min\u001b[39;00m raw_data[\u001b[39m1\u001b[39m:]]\n\u001b[1;32m     17\u001b[0m frequency \u001b[39m=\u001b[39m array(frequency)\n\u001b[1;32m     18\u001b[0m \u001b[39mreturn\u001b[39;00m frequency\n",
-      "Cell \u001b[0;32mIn[102], line 16\u001b[0m, in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m     14\u001b[0m file \u001b[39m=\u001b[39m detuning_files_dict[detuning][\u001b[39m0\u001b[39m]\n\u001b[1;32m     15\u001b[0m raw_data \u001b[39m=\u001b[39m get_file_contents(file)\n\u001b[0;32m---> 16\u001b[0m frequency \u001b[39m=\u001b[39m [\u001b[39mfloat\u001b[39m(line\u001b[39m.\u001b[39;49mstrip()\u001b[39m.\u001b[39;49msplit(\u001b[39m'\u001b[39m\u001b[39m\\t\u001b[39;00m\u001b[39m'\u001b[39m)[\u001b[39m1\u001b[39m]) \u001b[39mfor\u001b[39;00m line \u001b[39min\u001b[39;00m raw_data[\u001b[39m1\u001b[39m:]]\n\u001b[1;32m     17\u001b[0m frequency \u001b[39m=\u001b[39m array(frequency)\n\u001b[1;32m     18\u001b[0m \u001b[39mreturn\u001b[39;00m frequency\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "Cell \u001b[0;32mIn[121], line 7\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[39mFor data sets in the same format as 15112022, use version 1 of functions\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[39mFor data sets in the same format as 16112022, use version 2 of functions\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[39mYou should only ever need to change the number on iterate_through_power_levels_i\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m      6\u001b[0m data_set \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m15112022\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m----> 7\u001b[0m iterate_through_power_levels_1(data_set)\n",
+      "Cell \u001b[0;32mIn[120], line 16\u001b[0m, in \u001b[0;36miterate_through_power_levels_1\u001b[0;34m(data_set)\u001b[0m\n\u001b[1;32m     14\u001b[0m path \u001b[39m=\u001b[39m os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mjoin(os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mdirname(os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mdirname(sys\u001b[39m.\u001b[39mpath[\u001b[39m0\u001b[39m])), data_set)\n\u001b[1;32m     15\u001b[0m \u001b[39mfor\u001b[39;00m power_folder \u001b[39min\u001b[39;00m os\u001b[39m.\u001b[39mlistdir(path):\n\u001b[0;32m---> 16\u001b[0m     process_experiment_1(data_set, power_folder)\n",
+      "Cell \u001b[0;32mIn[120], line 4\u001b[0m, in \u001b[0;36mprocess_experiment_1\u001b[0;34m(data_set, power_folder)\u001b[0m\n\u001b[1;32m      2\u001b[0m detuning_files_dict, detunings \u001b[39m=\u001b[39m get_detuning_files_dict_1(data_set, power_folder)\n\u001b[1;32m      3\u001b[0m power \u001b[39m=\u001b[39m \u001b[39mint\u001b[39m(power_folder[\u001b[39m0\u001b[39m:\u001b[39m2\u001b[39m])\n\u001b[0;32m----> 4\u001b[0m gamma_list \u001b[39m=\u001b[39m [get_gamma(detuning, detuning_files_dict, power) \u001b[39mfor\u001b[39;00m detuning \u001b[39min\u001b[39;00m detunings]\n\u001b[1;32m      5\u001b[0m output_gamma(detunings, gamma_list, data_set, power_folder)\n",
+      "Cell \u001b[0;32mIn[120], line 4\u001b[0m, in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m      2\u001b[0m detuning_files_dict, detunings \u001b[39m=\u001b[39m get_detuning_files_dict_1(data_set, power_folder)\n\u001b[1;32m      3\u001b[0m power \u001b[39m=\u001b[39m \u001b[39mint\u001b[39m(power_folder[\u001b[39m0\u001b[39m:\u001b[39m2\u001b[39m])\n\u001b[0;32m----> 4\u001b[0m gamma_list \u001b[39m=\u001b[39m [get_gamma(detuning, detuning_files_dict, power) \u001b[39mfor\u001b[39;00m detuning \u001b[39min\u001b[39;00m detunings]\n\u001b[1;32m      5\u001b[0m output_gamma(detunings, gamma_list, data_set, power_folder)\n",
+      "Cell \u001b[0;32mIn[114], line 5\u001b[0m, in \u001b[0;36mget_gamma\u001b[0;34m(detuning, detuning_files_dict, power)\u001b[0m\n\u001b[1;32m      3\u001b[0m frequency, S21_offsets \u001b[39m=\u001b[39m get_frequency_and_S21_offsets(frequency, S21_detunings)\n\u001b[1;32m      4\u001b[0m S21_averages \u001b[39m=\u001b[39m get_S21_averages(S21_offsets)\n\u001b[0;32m----> 5\u001b[0m gamma \u001b[39m=\u001b[39m process_S21_averages(S21_averages, frequency, detuning, power)\n\u001b[1;32m      6\u001b[0m \u001b[39mreturn\u001b[39;00m gamma\n",
+      "Cell \u001b[0;32mIn[114], line 42\u001b[0m, in \u001b[0;36mprocess_S21_averages\u001b[0;34m(S21_averages, frequency, detuning, power)\u001b[0m\n\u001b[1;32m     40\u001b[0m gamma_list \u001b[39m=\u001b[39m []\n\u001b[1;32m     41\u001b[0m \u001b[39mfor\u001b[39;00m average_number, S21_average \u001b[39min\u001b[39;00m \u001b[39menumerate\u001b[39m(S21_averages):\n\u001b[0;32m---> 42\u001b[0m     fitting_parameters \u001b[39m=\u001b[39m fit(S21_average, frequency)\n\u001b[1;32m     43\u001b[0m     gamma_list\u001b[39m.\u001b[39mappend(fitting_parameters[\u001b[39m1\u001b[39m])\n\u001b[1;32m     44\u001b[0m     title \u001b[39m=\u001b[39m \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mDetuning: \u001b[39m\u001b[39m{\u001b[39;00mdetuning\u001b[39m}\u001b[39;00m\u001b[39m, Power: \u001b[39m\u001b[39m{\u001b[39;00mpower\u001b[39m}\u001b[39;00m\u001b[39m,\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39mAverage number: \u001b[39m\u001b[39m{\u001b[39;00maverage_number\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m\n",
+      "Cell \u001b[0;32mIn[118], line 17\u001b[0m, in \u001b[0;36mfit\u001b[0;34m(S21, freq)\u001b[0m\n\u001b[1;32m     15\u001b[0m fitting_parameters \u001b[39m=\u001b[39m plsq[\u001b[39m0\u001b[39m]\n\u001b[1;32m     16\u001b[0m \u001b[39mprint\u001b[39m(plsq[\u001b[39m1\u001b[39m])\n\u001b[0;32m---> 17\u001b[0m \u001b[39minput\u001b[39;49m()\n\u001b[1;32m     18\u001b[0m \u001b[39mreturn\u001b[39;00m fitting_parameters\n",
+      "File \u001b[0;32m/usr/local/lib/python3.8/dist-packages/ipykernel/kernelbase.py:1187\u001b[0m, in \u001b[0;36mKernel.raw_input\u001b[0;34m(self, prompt)\u001b[0m\n\u001b[1;32m   1185\u001b[0m     msg \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mraw_input was called, but this frontend does not support input requests.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m   1186\u001b[0m     \u001b[39mraise\u001b[39;00m StdinNotImplementedError(msg)\n\u001b[0;32m-> 1187\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_input_request(\n\u001b[1;32m   1188\u001b[0m     \u001b[39mstr\u001b[39;49m(prompt),\n\u001b[1;32m   1189\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_parent_ident[\u001b[39m\"\u001b[39;49m\u001b[39mshell\u001b[39;49m\u001b[39m\"\u001b[39;49m],\n\u001b[1;32m   1190\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mget_parent(\u001b[39m\"\u001b[39;49m\u001b[39mshell\u001b[39;49m\u001b[39m\"\u001b[39;49m),\n\u001b[1;32m   1191\u001b[0m     password\u001b[39m=\u001b[39;49m\u001b[39mFalse\u001b[39;49;00m,\n\u001b[1;32m   1192\u001b[0m )\n",
+      "File \u001b[0;32m/usr/local/lib/python3.8/dist-packages/ipykernel/kernelbase.py:1230\u001b[0m, in \u001b[0;36mKernel._input_request\u001b[0;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[1;32m   1227\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mKeyboardInterrupt\u001b[39;00m:\n\u001b[1;32m   1228\u001b[0m     \u001b[39m# re-raise KeyboardInterrupt, to truncate traceback\u001b[39;00m\n\u001b[1;32m   1229\u001b[0m     msg \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mInterrupted by user\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m-> 1230\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mKeyboardInterrupt\u001b[39;00m(msg) \u001b[39mfrom\u001b[39;00m \u001b[39mNone\u001b[39m\n\u001b[1;32m   1231\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mException\u001b[39;00m:\n\u001b[1;32m   1232\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mlog\u001b[39m.\u001b[39mwarning(\u001b[39m\"\u001b[39m\u001b[39mInvalid Message:\u001b[39m\u001b[39m\"\u001b[39m, exc_info\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: Interrupted by user"
      ]
     }
    ],
@@ -484,7 +486,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.10 (default, Nov 14 2022, 12:59:47) \n[GCC 9.4.0]"
   },
   "vscode": {
    "interpreter": {
