Created detuning objects

--- a/Data Fitting 1.1.ipynb
+++ b/Data Fitting 1.1.ipynb
@@ -229,6 +229,7 @@
     "    x_ticks = [get_x_tick(x_label) for x_label in x_labels]\n",
     "    x_labels = [f'{x_label/10**6:.0f}' for x_label in x_labels]\n",
     "    return x_ticks, x_labels\n",
+    "\n",
     "def set_y_ticks(ax):\n",
     "    y_ticks, y_labels = get_y_ticks_and_labels()\n",
     "    ax.set_yticks(y_ticks)\n",
@@ -245,6 +246,7 @@
     "    y_labels = linspace(26, 29, 7)\n",
     "    y_ticks = [get_y_tick(y_label) for y_label in y_labels]\n",
     "    return y_ticks, y_labels\n",
+    "\n",
     "def set_axis_labels(ax1, width):\n",
     "    ax1 = set_x_ticks(ax1)\n",
     "    ax1 = set_y_ticks(ax1)\n",
@@ -510,7 +512,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.10 (default, Nov 14 2022, 12:59:47) \n[GCC 9.4.0]"
   },
   "vscode": {
    "interpreter": {
